--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,18 @@
 			Use Maven Central for package search (https://search.maven.org/).
 		-->
 
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>webjars-locator-core</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>bootstrap</artifactId>
+			<version>4.3.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<repositories>
