Require names to be not blank

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,3 +1,6 @@
 ReceivingForm.customer.NotBlank = The customer's name must not be empty.
 ReceivingForm.description.NotBlank = The item description must not be empty.
 ReceivingForm.service.NotNull = Please select a service.
+RegistrationForm.name.NotBlank = Name must not be empty.
+RegistrationForm.password.NotEmpty = Password cannot be empty.
+EditStaffForm.name.NotBlank = Name must not be empty.
