password can now be changed

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -4,3 +4,4 @@ ReceivingForm.service.NotNull = Please select a service.
 RegistrationForm.name.NotBlank = Name must not be empty.
 RegistrationForm.password.NotEmpty = Password cannot be empty.
 EditStaffForm.name.NotBlank = Name must not be empty.
+PasswordForm.password.NotBlank = Password cannot be empty.
