Add more tests to StaffController

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -4,4 +4,6 @@ ReceivingForm.service.NotNull = Please select a service.
 RegistrationForm.name.NotBlank = Name must not be empty.
 RegistrationForm.password.NotBlank = Password cannot be blank.
 EditStaffForm.name.NotBlank = Name must not be empty.
+EditStaffForm.salary.NotNegative = Salary cannot be negative.
+EditStaffForm.salary.TooLarge = Salary is too large.
 PasswordForm.password.NotBlank = Password cannot be empty.
