error messages for blank finance description

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -8,3 +8,4 @@ EditStaffForm.salary.NotNegative = Salary cannot be negative.
 EditStaffForm.salary.TooLarge = Salary is too large.
 PasswordForm.password.NotBlank = Password cannot be empty.
 AddRoomForm.name.empty = This can not be left empty!
+AddFinanceForm.description.blank = Description musst not be blank.
