--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -9,3 +9,5 @@ EditStaffForm.salary.TooLarge = Salary is too large.
 PasswordForm.password.NotBlank = Password cannot be empty.
 AddRoomForm.name.empty = This can not be left empty!
 AddFinanceForm.description.blank = Description musst not be blank.
+materials.error.low = Minimum amount to restock/consume is 1.
+materials.error.high = Maximum amount to restock/consume is 10000.
