--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Uncomment these two lines of configuration to
-# enable persistent storage in db/kickstart.
+# enable persistent storage in db/missmint.
 ################################################
-# spring.datasource.url=jdbc:h2:./db/kickstart
+# spring.datasource.url=jdbc:h2:./db/missmint
 # spring.jpa.hibernate.ddl-auto=update
 
 
