validation messages for finance

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -8,6 +8,7 @@ EditStaffForm.salary.NotNegative = Salary cannot be negative.
 EditStaffForm.salary.TooLarge = Salary is too large.
 AddRoomForm.name.empty = This can not be left empty!
 AddFinanceForm.description.blank = Description musst not be blank.
+AddFinanceForm.BigDecimal.Digit = Price muss be digit.
 AddFinanceForm.BigDecimal.NotNull = Please enter the price.
 materials.error.low = Minimum amount to restock/consume is 1.
 materials.error.high = Maximum amount to restock/consume is 10000.
