--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -6,6 +6,7 @@ RegistrationForm.password.NotBlank = Password cannot be blank.
 EditStaffForm.name.NotBlank = Name must not be empty.
 EditStaffForm.salary.NotNegative = Salary cannot be negative.
 EditStaffForm.salary.TooLarge = Salary is too large.
+PasswordForm.password.NotBlank = Password cannot be empty.
 AddRoomForm.name.empty = This can not be left empty!
 AddFinanceForm.description.blank = Description musst not be blank.
 AddFinanceForm.BigDecimal.Digit = Price muss be digit.
