--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -9,7 +9,7 @@ EditStaffForm.salary.TooLarge = Salary is too large.
 PasswordForm.password.NotBlank = Password cannot be empty.
 AddRoomForm.name.empty = This can not be left empty!
 AddFinanceForm.description.blank = Description musst not be blank.
-AddFinanceForm.BigDecimal.Digit = Price muss be digit.
+AddFinanceForm.BigDecimal.Digit = Price must be of the monetary amount.
 AddFinanceForm.BigDecimal.NotNull = Please enter the price.
 materials.error.low = Minimum amount to restock/consume is 1.
 materials.error.high = Maximum amount to restock/consume is 10000.
